--- a/config/locales/doc_auth/es.yml
+++ b/config/locales/doc_auth/es.yml
@@ -21,10 +21,12 @@ es:
       zip_code: Zip Code
     headings:
       address: Mailing Address
+      capture_complete: We have verified your state issued ID
       ssn: Por favor ingrese su número de seguro social.
       take_pic_back: Take a picture of the back of your ID
       take_pic_front: Take a picture of the front of your ID
       take_picture: Take a picture with a phone
+      text_message: We sent a message to your phone
       upload: How would you like to upload your state issued ID?
       upload_back: Cargue una foto del dorso de su identificación emitida por el estado.
       upload_from_computer: Upload from your computer
@@ -35,8 +37,9 @@ es:
       welcome: We need to verify your identity
     info:
       camera_required: Your mobile phone must have a camera and a web browser
-      link_sent: Link successfully sent.  Please check your phone and follow instructions
-        to verify your identity.
+      link_sent: Please check your phone and follow instructions to take a picture
+        of your state issued ID. When you are done click continue here to finish verifying
+        your identity.
       take_picture: Use the camera on your mobile phone and upload images of your
         ID.  We only use the images to verify your identity.
       upload: We'll collect information about you by reading from your state-issued
@@ -58,6 +61,7 @@ es:
         instructions to verify your identity.
       send_sms: We'll send a text message to your device with a link.  Follow that
         link to your browser to take pictures of the front and back of your ID.
+      switch_back: Switch back to your computer to finish verifying your identity
       take_pic: 'For best results:'
       take_pic1: Use a dark background
       take_pic2: Take the photo on a flat surface
