--- a/config/locales/jobs/en.yml
+++ b/config/locales/jobs/en.yml
@@ -9,7 +9,7 @@ en:
         cancel: %{cancel_link}'
     sms_doc_auth_link_job:
       message: 'You''ve requested to verify your identity on a mobile phone.  Please
-        sign in to %{application}: %{sp_link}'
+        take a picture of your state issued ID: %{link}'
     sms_otp_sender_job:
       login_message: "%{code} is your %{app} security code. Use this to continue signing
         in to your account. This code will expire in %{expiration} minutes."
