--- a/config/locales/jobs/es.yml
+++ b/config/locales/jobs/es.yml
@@ -8,8 +8,8 @@ es:
         ser procesado en 24 horas. Si no desea eliminar su cuenta, por favor cancelar:
         %{cancel_link}'
     sms_doc_auth_link_job:
-      message: 'You''ve requested to verify your identity on a mobile phone.  Please
-        sign in to %{application}: %{sp_link}'
+      message: 'Has solicitado verificar tu identidad en un teléfono móvil. Por favor,
+        tome una foto de la identificación emitida por su estado: %{link}'
     sms_otp_sender_job:
       login_message: "%{code} es tu código de seguridad de %{app}. Use esto para continuar
         ingresando a su cuenta. Este código caducará en %{expiration} minutos."
