Token rewrite plus controller spec

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -10,6 +10,12 @@ en:
         Please try clicking the link in your email again.
       granted_token_missing: The link to delete your login.gov account is invalid.
         Please try clicking the link in your email again.
+    capture_doc:
+      invalid_link: This link is expired or not valid.  Please request another link
+        to verify your identity on a mobile phone.
+      token_expired: token expired
+      token_invalid: token invalid
+      token_missing: token missing
     confirm_password_incorrect: Incorrect password.
     invalid_authenticity_token: Oops, something went wrong. Please try again.
     invalid_totp: Invalid code. Please try again.
