--- a/config/locales/doc_auth/es.yml
+++ b/config/locales/doc_auth/es.yml
@@ -2,44 +2,44 @@
 es:
   doc_auth:
     buttons:
-      change_address: change
-      change_ssn: change
-      get_started: Get started
+      change_address: cambio
+      change_ssn: cambio
+      get_started: Empezar
       start_over: Comenzar de nuevo
-      use_computer: Use your computer
-      use_phone: Use your phone
+      use_computer: Usa tu computadora
+      use_phone: Usa tu telefono
     forms:
-      address1: Address
-      city: City
+      address1: Dirección
+      city: Ciudad
       dob: Fecha de nacimiento
       doc_success: Verificamos su número de seguro social y su identificación emitida
         por el estado.
       first_name: Nombre de pila
       last_name: Apellido
       ssn: Número de seguridad social
-      state: State
-      zip_code: Zip Code
+      state: Estado
+      zip_code: Código postal
     headings:
-      address: Mailing Address
-      capture_complete: We have verified your state issued ID
+      address: Dirección de envio
+      capture_complete: Hemos verificado la identificación emitida por su estado
       ssn: Por favor ingrese su número de seguro social.
-      take_pic_back: Take a picture of the back of your ID
-      take_pic_front: Take a picture of the front of your ID
-      take_picture: Take a picture with a phone
-      text_message: We sent a message to your phone
-      upload: How would you like to upload your state issued ID?
+      take_pic_back: Toma una foto de la parte posterior de tu identificación
+      take_pic_front: Toma una foto del frente de tu identificación
+      take_picture: Toma una foto con un teléfono
+      text_message: Enviamos un mensaje a su teléfono
+      upload: "¿Cómo te gustaría subir tu identificación emitida por el estado?"
       upload_back: Cargue una foto del dorso de su identificación emitida por el estado.
-      upload_from_computer: Upload from your computer
-      upload_from_phone: Take a picture with a phone to upload your ID
+      upload_from_computer: Sube desde tu computadora
+      upload_from_phone: Toma una foto con un teléfono para subir tu ID
       upload_front: Cargue una foto del frente de su identificación emitida por el
         estado.
-      verify: Please verify your information
-      welcome: We need to verify your identity
+      verify: Por favor verifica tu información
+      welcome: Nosotros necesitamos verificar tu identidad
     info:
       camera_required: Your mobile phone must have a camera and a web browser
-      link_sent: Please check your phone and follow instructions to take a picture
-        of your state issued ID. When you are done click continue here to finish verifying
-        your identity.
+      link_sent: Verifique su teléfono y siga las instrucciones para tomar una fotografía
+        de la identificación emitida por su estado. Cuando haya terminado, haga clic
+        en continuar aquí para terminar de verificar su identidad.
       take_picture: Use the camera on your mobile phone and upload images of your
         ID.  We only use the images to verify your identity.
       upload: We'll collect information about you by reading from your state-issued
@@ -61,7 +61,7 @@ es:
         instructions to verify your identity.
       send_sms: We'll send a text message to your device with a link.  Follow that
         link to your browser to take pictures of the front and back of your ID.
-      switch_back: Switch back to your computer to finish verifying your identity
+      switch_back: Vuelve a tu computadora para terminar de verificar tu identidad
       take_pic: 'For best results:'
       take_pic1: Use a dark background
       take_pic2: Take the photo on a flat surface
