--- a/config/locales/doc_auth/fr.yml
+++ b/config/locales/doc_auth/fr.yml
@@ -2,45 +2,46 @@
 fr:
   doc_auth:
     buttons:
-      change_address: change
-      change_ssn: change
-      get_started: Get started
+      change_address: changement
+      change_ssn: changement
+      get_started: Commencer
       start_over: Recommencer
-      use_computer: Use your computer
-      use_phone: Use your phone
+      use_computer: Utilisez votre ordinateur
+      use_phone: Utilisez votre téléphone
     forms:
-      address1: Address
-      city: City
+      address1: Adresse
+      city: Ville
       dob: Date de naissance
       doc_success: Nous avons vérifié votre numéro de sécurité sociale et votre identifiant
         délivré par l'État.
       first_name: Prénom
       last_name: Nom de famille
       ssn: Numéro de sécurité sociale
-      state: State
-      zip_code: Zip Code
+      state: Etat
+      zip_code: Code postal
     headings:
-      address: Mailing Address
-      capture_complete: We have verified your state issued ID
+      address: Adresse mail
+      capture_complete: Nous avons vérifié votre ID émis par l'état
       ssn: S'il vous plaît entrez votre numéro de sécurité sociale.
-      take_pic_back: Take a picture of the back of your ID
-      take_pic_front: Take a picture of the front of your ID
-      take_picture: Take a picture with a phone
-      text_message: We sent a message to your phone
-      upload: How would you like to upload your state issued ID?
+      take_pic_back: Prenez une photo au verso de votre identifiant
+      take_pic_front: Prenez une photo du recto de votre identifiant
+      take_picture: Prendre une photo avec un téléphone
+      text_message: Nous avons envoyé un message à votre téléphone
+      upload: Comment voudriez-vous télécharger votre ID émis par l'état?
       upload_back: S'il vous plaît télécharger une photo du dos de votre ID émis par
         l'état.
-      upload_from_computer: Upload from your computer
-      upload_from_phone: Take a picture with a phone to upload your ID
+      upload_from_computer: Télécharger depuis votre ordinateur
+      upload_from_phone: Prenez une photo avec un téléphone pour télécharger votre
+        identifiant
       upload_front: Veuillez télécharger une photo du recto de votre identifiant émis
         par l'État.
-      verify: Please verify your information
-      welcome: We need to verify your identity
+      verify: S'il vous plaît vérifier vos informations
+      welcome: Nous devons vérifier votre identité
     info:
       camera_required: Your mobile phone must have a camera and a web browser
-      link_sent: Please check your phone and follow instructions to take a picture
-        of your state issued ID. When you are done click continue here to finish verifying
-        your identity.
+      link_sent: Veuillez vérifier votre téléphone et suivre les instructions pour
+        prendre une photo de votre identité émise par l'État. Lorsque vous avez terminé,
+        cliquez ici pour continuer à vérifier votre identité.
       take_picture: Use the camera on your mobile phone and upload images of your
         ID.  We only use the images to verify your identity.
       upload: We'll collect information about you by reading from your state-issued
@@ -62,7 +63,8 @@ fr:
         instructions to verify your identity.
       send_sms: We'll send a text message to your device with a link.  Follow that
         link to your browser to take pictures of the front and back of your ID.
-      switch_back: Switch back to your computer to finish verifying your identity
+      switch_back: Revenez sur votre ordinateur pour terminer la vérification de votre
+        identité
       take_pic: 'For best results:'
       take_pic1: Use a dark background
       take_pic2: Take the photo on a flat surface
