--- a/config/locales/doc_auth/es.yml
+++ b/config/locales/doc_auth/es.yml
@@ -36,41 +36,42 @@ es:
       verify: Por favor verifica tu información
       welcome: Nosotros necesitamos verificar tu identidad
     info:
-      camera_required: Your mobile phone must have a camera and a web browser
+      camera_required: Su teléfono móvil debe tener una cámara y un navegador web
       link_sent: Verifique su teléfono y siga las instrucciones para tomar una fotografía
         de la identificación emitida por su estado. Cuando haya terminado, haga clic
         en continuar aquí para terminar de verificar su identidad.
-      take_picture: Use the camera on your mobile phone and upload images of your
-        ID.  We only use the images to verify your identity.
-      upload: We'll collect information about you by reading from your state-issued
-        ID.  We do not store images you upload.  We only verify your identity.
-      upload_from_computer: Upload images of your ID you have on your computer or
-        use a scanner to capture images of your ID
-      upload_from_phone: Upload pictures directly from your phone camera
-      upload_image: We only use your ID to verify your identity, and we will not save
-        any images.  We accept PDF, PNG, and JPG formats.
-      welcome: We verify your identity to make sure you are you--not someone pretending
-        to be you.  Verifying your identity also allows you to access services that
-        handle Personal Identifiable Information.
+      take_picture: Use la cámara en su teléfono móvil y cargue imágenes de su identificación.
+        Solo usamos las imágenes para verificar su identidad.
+      upload: Recopilaremos información sobre usted leyendo su identificación emitida
+        por el estado. No almacenamos imágenes que subas. Solo verificamos su identidad.
+      upload_from_computer: Cargue imágenes de su identificación que tenga en su computadora
+        o use un escáner para capturar imágenes de su identificación
+      upload_from_phone: Sube imágenes directamente desde la cámara de tu teléfono
+      upload_image: Solo utilizamos su ID para verificar su identidad y no guardaremos
+        ninguna imagen. Aceptamos formatos PDF, PNG, y JPG.
+      welcome: Verificamos su identidad para asegurarnos de que usted es usted, y
+        no alguien que pretende ser usted. La verificación de su identidad también
+        le permite acceder a servicios que manejan información de identificación personal.
     instructions:
-      bullet1: Upload your ID
-      bullet2: Confirm your address
-      bullet3: Secure your account
-      bullet4: Account recovery
-      email_sent: Link sent to %{email}. Please check your desktop email and follow
-        instructions to verify your identity.
-      send_sms: We'll send a text message to your device with a link.  Follow that
-        link to your browser to take pictures of the front and back of your ID.
+      bullet1: Sube tu ID
+      bullet2: Confirma tu direccion
+      bullet3: Asegure su cuenta
+      bullet4: Recuperación de cuenta
+      email_sent: Enlace enviado a %{email}. Compruebe el correo electrónico de su
+        escritorio y siga las instrucciones para verificar su identidad.
+      send_sms: Le enviaremos un mensaje de texto a su dispositivo con un enlace.
+        Siga ese enlace a su navegador para tomar fotografías de la parte delantera
+        y trasera de su identificación.
       switch_back: Vuelve a tu computadora para terminar de verificar tu identidad
-      take_pic: 'For best results:'
-      take_pic1: Use a dark background
-      take_pic2: Take the photo on a flat surface
-      take_pic3: Do not use the flash on your camera
-      take_pic4: Use the landscape orientation
-      text1: along with your Social Security Number
-      text2: using a phone number or mailing address
-      text3: by re-entering your login.gov password
-      text4: make sure you always have access
-      welcome: 'What you''ll need to do:'
+      take_pic: 'Para mejores resultados:'
+      take_pic1: Usa un fondo oscuro
+      take_pic2: Toma la foto sobre una superficie plana
+      take_pic3: No uses el flash en tu cámara
+      take_pic4: Usa la orientación del paisaje
+      text1: junto con su número de seguro social
+      text2: usando un número de teléfono o dirección de correo
+      text3: volviendo a ingresar su contraseña de login.gov
+      text4: asegúrate de tener siempre acceso
+      welcome: 'Lo que necesitarás hacer:'
     titles:
       doc_auth: Autenticación de documentos
