--- a/config/locales/user_mailer/es.yml
+++ b/config/locales/user_mailer/es.yml
@@ -44,10 +44,6 @@ es:
       help: Si no desea cambiar su email, visite el %{app} %{help_link} o el %{contact_link}.
       intro: El email de su cuenta de %{app} ha sido cambiado.
     help_link_text: Centro de Ayuda
-    new_device_sign_in:
-      help_html: <p>Su cuenta Login.gov acaba de iniciar sesión en un nuevo dispositivo.</p><br/><br/>
-        <p><strong>%{date}<br/>%{location}</strong></p>
-      subject: Nuevo initio de sesion con su Login.gov cuenta
     letter_expired:
       help: ''
       info: La carta que le enviamos a su dirección tiene un código de confirmación
@@ -61,6 +57,10 @@ es:
         que nos ayudará a verificar su dirección. Puede completar el proceso de verificación
         de identidad iniciando sesión en %{link} e ingresando el código de confirmación.
       subject: Le enviamos una carta a la dirección que tiene archivada
+    new_device_sign_in:
+      help_html: "<p>Su cuenta Login.gov acaba de iniciar sesión en un nuevo dispositivo.</p><br/><br/>
+        <p><strong>%{date}<br/>%{location}</strong></p>"
+      subject: Nuevo initio de sesion con su Login.gov cuenta
     password_changed:
       help: Si no realizó este cambio, visite el %{app} %{help_link} o el %{contact_link}.
       intro: Tiene una contraseña nueva para su cuenta de %{app}.
