--- a/config/locales/doc_auth/en.yml
+++ b/config/locales/doc_auth/en.yml
@@ -20,10 +20,12 @@ en:
       zip_code: Zip Code
     headings:
       address: Mailing Address
+      capture_complete: We have verified your state issued ID
       ssn: Please enter your social security number.
       take_pic_back: Take a picture of the back of your ID
       take_pic_front: Take a picture of the front of your ID
       take_picture: Take a picture with a phone
+      text_message: We sent a message to your phone
       upload: How would you like to upload your state issued ID?
       upload_back: Upload an image of the back of your state issued ID
       upload_from_computer: Upload from your computer
@@ -33,8 +35,9 @@ en:
       welcome: We need to verify your identity
     info:
       camera_required: Your mobile phone must have a camera and a web browser
-      link_sent: Link successfully sent.  Please check your phone and follow instructions
-        to verify your identity.
+      link_sent: Please check your phone and follow instructions to take a picture
+        of your state issued ID. When you are done click continue here to finish verifying
+        your identity.
       take_picture: Use the camera on your mobile phone and upload images of your
         ID.  We only use the images to verify your identity.
       upload: We'll collect information about you by reading from your state-issued
@@ -44,7 +47,7 @@ en:
       upload_from_phone: Upload pictures directly from your phone camera
       upload_image: We only use your ID to verify your identity, and we will not save
         any images.  We accept PDF, PNG, and JPG formats.
-      welcome: We verify your identity to make sure you are you--not someone pretending
+      welcome: We verify your identity to make sure you are you—not someone pretending
         to be you.  Verifying your identity also allows you to access services that
         handle Personal Identifiable Information.
     instructions:
@@ -56,6 +59,7 @@ en:
         instructions to verify your identity.
       send_sms: We'll send a text message to your device with a link.  Follow that
         link to your browser to take pictures of the front and back of your ID.
+      switch_back: Switch back to your computer to finish verifying your identity
       take_pic: 'For best results:'
       take_pic1: Use a dark background
       take_pic2: Take the photo on a flat surface
