--- a/config/locales/event_disavowals/en.yml
+++ b/config/locales/event_disavowals/en.yml
@@ -4,7 +4,7 @@ en:
     errors:
       event_already_disavowed: You have already used that link to change your password.
         Sign in to change your password.
-      event_disavowal_expired: The link to change your password has expired. Sign in
-        to change your password.
+      event_disavowal_expired: The link to change your password has expired. Sign
+        in to change your password.
       event_not_found: The link to change your password is invalid. Sign in to change
         your password.
