--- a/config/locales/two_factor_authentication/en.yml
+++ b/config/locales/two_factor_authentication/en.yml
@@ -7,6 +7,9 @@ en:
       pending_html: You currently have a pending request to delete your account. It
         takes 24 hours from the time you made the request to complete the process.
         Please check back later. %{cancel_link}
+      recover_html: If you can't use any of these security options above, you can
+        %{link}.
+      recover_link: reset your account
       successful_cancel: Thank you. Your request to delete your login.gov account
         has been cancelled.
       text_html: If you can't use any of these security options above, you can reset
