--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -64,7 +64,7 @@ en:
     password_changed:
       disavowal_link: here
       help: If you did not make this change, you can reset your password %{disavowal_link}.
-        For more help please visit the %{app} %{help_link} or %{contact_link}.
+        For more help, please visit the %{app} %{help_link} or %{contact_link}.
       intro: You have a new password for your %{app} account.
     personal_key_regenerated:
       help_html: <p>Your login.gov account was just issued a new 16-character personal
