--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -65,8 +65,10 @@ fr:
         <p><strong>%{date}<br/>%{location}</strong></p>"
       subject: Nouvelle connexion avec votre compte Login.gov
     password_changed:
-      help: Si vous n'avez pas changé votre mot de passe, veuillez visiter le %{help_link}
-        de %{app} ou %{contact_link}.
+      disavowal_link: ici
+      help: Si vous n'avez pas changé votre mot de passe, vous pouvez réinitialiser
+        votre mot de passe %{disavowal_link}. Pour plus d'aide, veuillez visiter le
+        %{help_link} de %{app} ou %{contact_link}.
       intro: Le mot de passe de votre compte %{app} a été changé.
     personal_key_regenerated:
       help_html: <p>Votre compte login.gov vient de recevoir une nouvelle clé personnelle
