**Why:** So that users can generate backup codes as a 2FA option.
**How:** This commit adds a Backup Codes optiopn in the 2FA section of the
account screen.  A "generated" status is shown if the user has generated
backup codes as a 2FA option, otherwise a "not generated" status is shown.
A Manage link is provided that takes the user to the generate backup codes
screen.

--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -8,6 +8,9 @@ es:
       auth_app_disabled: no permitido
       auth_app_enabled: permitido
       authentication_app: App de autenticación
+      backup_codes: Códigos de respaldo
+      backup_codes_exist: generado
+      backup_codes_no_exist: no generado
       device: "%{browser} en %{os}"
       dob: Fecha de nacimiento
       email: Email
