--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -5,6 +5,7 @@ en:
       legend: Select a secondary authentication option
     backup_code:
       download: Download
+      generate: Generate
       info: Use backup codes if you cannot access your phone to sign in
       instructions: You will be asked for a backup code <strong>each time you sign
         in</strong> to your login.gov account.
@@ -13,6 +14,7 @@ en:
         old codes won't work anymore.
       new_login_codes: Generate new login codes
       print: Print
+      regenerate: Regenerate
       subinfo: Each code may only be used once, once the 10th code has been used you
         will be prompted to download a new list.  Treat your recovery codes with the
         same level of attention as you would your password.
