--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -5,6 +5,7 @@ fr:
       legend: Sélectionnez une option d'authentification secondaire
     backup_code:
       download: Télécharger
+      generate: Générer
       info: Utiliser les codes de connexion si vous ne pouvez pas accéder à votre
         téléphone pour vous connecter
       instructions: Un code de connexion vous sera demandé chaque fois que vous vous
@@ -14,6 +15,7 @@ fr:
         ou les imprimer. Vos anciens codes ne fonctionneront plus.
       new_login_codes: Générer de nouveaux codes de connexion
       print: Impression
+      regenerate: Régénérer
       subinfo: Chaque code ne peut être utilisé qu'une seule fois. Une fois le code
         10 utilisé, vous serez invité à télécharger une nouvelle liste. Traitez vos
         codes de récupération avec le même niveau d’attention que votre mot de passe.
