--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -58,7 +58,10 @@ en:
         by signing into %{link} and entering the confirmation code.
       subject: We mailed a letter to the address you have on file
     new_device_sign_in:
-      help_html: "<p>Your Login.gov account was just used to sign in on a new device.</p><br/>
+      disavowal_link: here
+      help: If you did not make this change, you can reset your password %{disavowal_link}.
+        For more help, please visit the %{app} %{help_link} or %{contact_link}.
+      info_html: "<p>Your Login.gov account was just used to sign in on a new device.</p><br/>
         <p><strong>%{date}<br/>%{location}</strong></p>"
       subject: New sign-in with your Login.gov account
     password_changed:
