--- a/config/locales/user_mailer/es.yml
+++ b/config/locales/user_mailer/es.yml
@@ -58,7 +58,10 @@ es:
         de identidad iniciando sesión en %{link} e ingresando el código de confirmación.
       subject: Le enviamos una carta a la dirección que tiene archivada
     new_device_sign_in:
-      help_html: "<p>Su cuenta Login.gov acaba de iniciar sesión en un nuevo dispositivo.</p><br/><br/>
+      disavowal_link: aquí
+      help: Si no realizó este cambio puede restablecer su contraseña %{disavowal_link}.
+        Para más ayuda, visite el %{app} %{help_link} o el %{contact_link}.
+      info_html: "<p>Su cuenta Login.gov acaba de iniciar sesión en un nuevo dispositivo.</p><br/><br/>
         <p><strong>%{date}<br/>%{location}</strong></p>"
       subject: Nuevo initio de sesion con su Login.gov cuenta
     password_changed:
