--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -61,7 +61,11 @@ fr:
         entrant le code de confirmation.
       subject: Nous avons envoyé une lettre à l'adresse que vous avez en dossier
     new_device_sign_in:
-      help_html: "<p>Votre compte login.gov a été connecté sur un nouvel appareil.</p><br/><br/>
+      disavowal_link: ici
+      help: Si vous n'avez pas changé votre mot de passe, vous pouvez réinitialiser
+        votre mot de passe %{disavowal_link}. Pour plus d'aide, veuillez visiter le
+        %{help_link} de %{app} ou %{contact_link}.
+      info_html: "<p>Votre compte login.gov a été connecté sur un nouvel appareil.</p><br/><br/>
         <p><strong>%{date}<br/>%{location}</strong></p>"
       subject: Nouvelle connexion avec votre compte Login.gov
     password_changed:
