Add new unphishable badge icon
Update Unphishable translations

Refactor account header partial to show 0-2 badges.

--- a/config/locales/headings/fr.yml
+++ b/config/locales/headings/fr.yml
@@ -11,6 +11,7 @@ fr:
       profile_info: Information du profil
       reactivate: Réactivez votre compte
       two_factor: Authentification à deux facteurs
+      unphishable: Incapable de phishing
       verified_account: Compte vérifié
     account_recovery_setup:
       piv_cac_linked: Votre carte PIV/CAC est liée à votre compte
