--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -11,6 +11,7 @@ en:
       profile_info: Profile information
       reactivate: Reactivate your account
       two_factor: Two-factor authentication
+      unphishable: Unphishable
       verified_account: Verified Account
     account_recovery_setup:
       piv_cac_linked: Your PIV/CAC card is linked to your account
