--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -11,6 +11,7 @@ es:
       profile_info: Información de perfil
       reactivate: Reactive su cuenta
       two_factor: Autenticación de dos factores
+      unphishable: Incapaz de phish
       verified_account: Cuenta verificada
     account_recovery_setup:
       piv_cac_linked: Tu tarjeta PIV/CAC está vinculada a tu cuenta
