Add backup codes option to account page (#2819)
* **Why:** So that users can generate backup codes as a 2FA option.

**How:** This commit adds a Backup Codes optiopn in the 2FA section of the
account screen.  A "generated" status is shown if the user has generated
backup codes as a 2FA option, otherwise a "not generated" status is shown.
A Manage link is provided that takes the user to the generate backup codes
screen.

--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -8,6 +8,8 @@ en:
       auth_app_disabled: not enabled
       auth_app_enabled: enabled
       authentication_app: Authentication app
+      backup_codes_exist: generated
+      backup_codes_no_exist: not generated
       device: "%{browser} on %{os}"
       dob: Date of birth
       email: Email address
