--- a/config/locales/recover/es.yml
+++ b/config/locales/recover/es.yml
@@ -22,3 +22,6 @@ es:
       instructions: Queremos asegurarnos de que usted, y solo usted, tenga acceso
         a su cuenta
       reverify: A continuación, volvamos a verificar su identidad
+      success: Has recuperado exitosamente tu cuenta. Para evitar tener que recuperar
+        su cuenta en el futuro, agregue otra opción de seguridad de las siguientes
+        opciones de autenticación de dos factores.
