--- a/config/locales/doc_auth/es.yml
+++ b/config/locales/doc_auth/es.yml
@@ -48,7 +48,7 @@ es:
         o use un escáner para capturar imágenes de su identificación
       upload_from_phone: Sube imágenes directamente desde la cámara de tu teléfono
       upload_image: Solo utilizamos su ID para verificar su identidad y no guardaremos
-        ninguna imagen. Aceptamos formatos PDF, PNG, y JPG.
+        ninguna imagen. Aceptamos los formatos BMP, PNG, TIFF y JPG.
       welcome: Verificamos su identidad para asegurarnos de que usted es usted, y
         no alguien que pretende ser usted. La verificación de su identidad también
         le permite acceder a servicios que manejan información de identificación personal.
