--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -14,7 +14,7 @@ en:
       unphishable: Unphishable
       verified_account: Verified Account
     account_recovery_setup:
-      piv_cac_linked: Your PIV/CAC card is linked to your account
+      secondary_method: Enable another authentication method
     add_info:
       phone: Add a phone number
     cancellations:
