LG-1045 Fix doc auth error handling
**Why**: So users can get clear instructions on how to proceed on document errors and also not have to hit restart at the end when a front or back image fails.

**How**: Fix the error handling to capture acuant errors and provide a generic error to the user.  Reset the state machine back to the front image step.  Add the ability for the flow state to change the step and redirect on a POST.

--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -17,6 +17,10 @@ es:
       token_invalid: ficha invalida
       token_missing: falta el token
     confirm_password_incorrect: La contraseña es incorrecta.
+    doc_auth:
+      general_error: Su identificación emitida por el estado no pudo ser verificada.
+        Por favor, intente cargar diferentes imágenes comenzando con el frente de
+        su identificación emitida por el estado.
     invalid_authenticity_token: "¡Oops! Algo salió mal. Inténtelo de nuevo."
     invalid_totp: El código es inválido. Vuelva a intentarlo.
     max_password_attempts_reached: Ha ingresado demasiadas contraseñas incorrectas.
