--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -17,6 +17,9 @@ en:
       token_invalid: token invalid
       token_missing: token missing
     confirm_password_incorrect: Incorrect password.
+    doc_auth:
+      general_error: Your state issued ID could not be verified.  Please try uploading
+        different images starting with the front of your state issued ID.
     invalid_authenticity_token: Oops, something went wrong. Please try again.
     invalid_totp: Invalid code. Please try again.
     max_password_attempts_reached: You've entered too many incorrect passwords. You
