LG-1071 Add remember device to webauthn
**Why**: So that webauthn users can use remember device

**How**: Break the webauthn verification flow into 2 steps. In the first step, the user presents their key. In the second step they choose to remember their device or not.

--- a/config/locales/two_factor_authentication/en.yml
+++ b/config/locales/two_factor_authentication/en.yml
@@ -116,3 +116,6 @@ en:
     webauthn_fallback:
       question: Don't have your security key available?
     webauthn_header_text: Present your security key
+    webauthn_verified:
+      header: Security key verified
+      info: We have verified your security key. Click continue to sign in.
