--- a/config/locales/two_factor_authentication/fr.yml
+++ b/config/locales/two_factor_authentication/fr.yml
@@ -119,3 +119,6 @@ fr:
     webauthn_fallback:
       question: Votre clé de sécurité n'est-elle pas disponible?
     webauthn_header_text: Présentez votre clé de sécurité
+    webauthn_verified:
+      header: Clé de sécurité vérifiée
+      info: Nous avons vérifié votre clé de sécurité. Cliquez sur Continuer pour vous connecter.
