--- a/config/locales/two_factor_authentication/es.yml
+++ b/config/locales/two_factor_authentication/es.yml
@@ -123,4 +123,5 @@ es:
     webauthn_header_text: Presenta tu clave de seguridad
     webauthn_verified:
       header: Clave de seguridad verificada
-      info: Hemos verificado su clave de seguridad. Haga clic en continuar para iniciar sesión.
+      info: Hemos verificado su clave de seguridad. Haga clic en continuar para iniciar
+        sesión.
