LG-1007 Add an confirmation page to backup code regeneration
**Why**: So that the user will be aware that regenerating their backup codes blows away their old ones and have a chance to cancel

--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -8,6 +8,7 @@ en:
       auth_app_disabled: not enabled
       auth_app_enabled: enabled
       authentication_app: Authentication app
+      backup_code_confirm_regenerate: Yes, regenerate codes
       backup_codes_exist: generated
       backup_codes_no_exist: not generated
       device: "%{browser} on %{os}"
