--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -8,6 +8,7 @@ es:
       auth_app_disabled: no permitido
       auth_app_enabled: permitido
       authentication_app: App de autenticación
+      backup_code_confirm_regenerate: Sí, regenerar códigos.
       backup_codes_exist: generado
       backup_codes_no_exist: no generado
       device: "%{browser} en %{os}"
