--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -22,6 +22,12 @@ es:
       subtitle: Tus códigos de respaldo
       title: Códigos de respaldo
       warn: Descargue, imprima o escriba sus códigos de seguridad personales.
+    backup_code_regenerate:
+      caution: Si vuelve a generar sus códigos de respaldo, recibirá un nuevo conjunto
+        de códigos de respaldo. Sus códigos de copia de seguridad originales ya no
+        serán válidos.
+      confirm: "¿Está seguro de que desea volver a generar sus códigos de copia de
+        seguridad?"
     buttons:
       back: Atrás
       cancel: Sí, cancelar
