--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -8,6 +8,7 @@ fr:
       auth_app_disabled: non activée
       auth_app_enabled: activée
       authentication_app: Application d'authentification
+      backup_code_confirm_regenerate: Oui, régénérer les codes
       backup_codes_exist: généré
       backup_codes_no_exist: non généré
       device: "%{browser} sur %{os}"
