--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -21,6 +21,10 @@ en:
       subtitle: Your backup codes
       title: Backup Codes
       warn: Download, print, or write down your personal security codes.
+    backup_code_regenerate:
+      caution: If you regenerate your backup codes you will receive a new set of backup
+        codes. Your original backup codes will no longer be valid.
+      confirm: Are you sure you want to regenerate your backup codes?
     buttons:
       back: Back
       cancel: Yes, cancel
