--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -110,6 +110,8 @@ fr:
       try_again: Utilisez un autre numéro de téléphone
     two_factor_choice:
       legend: Sélectionnez une option pour sécuriser votre compte
+      secondary_method: Sélectionnez une option supplémentaire pour sécuriser votre
+        compte
     verify_profile:
       instructions: Entrez le code à dix caractères qui se trouve dans la lettre que
         nous vous avons envoyée.
