--- a/config/locales/instructions/es.yml
+++ b/config/locales/instructions/es.yml
@@ -14,7 +14,8 @@ es:
           heading: "¿No tienes tu clave personal?"
         with_key: "¿Tiene su clave personal?"
     account_recovery_setup:
-      secondary_method_next_step: Luego te proporcionaremos una forma de recuperar tu cuenta.
+      secondary_method_next_step: Luego te proporcionaremos una forma de recuperar
+        tu cuenta.
     forgot_password:
       close_window: Puede cerrar esta ventana del navegador después que haya restablecido
         su contraseña.
