--- a/config/locales/notices/es.yml
+++ b/config/locales/notices/es.yml
@@ -2,6 +2,7 @@
 es:
   notices:
     account_reactivation: "¡Estupendo! Tiene su clave personal."
+    backup_codes_configured: Ha permitido los códigos de respaldo.
     dap_participation: Participamos en el programa analítico del Gobierno de Estados
       Unidos. Vea los datos en analytics.usa.gov (en inglés).
     forgot_password:
@@ -14,6 +15,7 @@ es:
         link: crear una cuenta nueva
         text_html: O, %{link} utilizando un email diferente.
     password_changed: Ha cambiado su contraseña.
+    phone_configured: Ha permitido un teléfono.
     piv_cac_configured: Tarjeta PIV/CAC vinculada con éxito.
     piv_cac_disabled: Tarjeta PIV/CAC desvinculada con éxito.
     resend_confirmation_email:
